--- a/gui/index.html
+++ b/gui/index.html
@@ -5,11 +5,25 @@
     <title>Temperature Dashboard</title>
     <script src='js/jquery3.3.1.min.js'></script>
     <script src='js/jquery-ui.js'></script>
-    <script src='js/d3.js'></script>
+     <script src='js/d3.js'></script>
     <script src='js/plotly-latest.min.js'></script>
-    <script src='js/plot.js'></script>
+
     <link href="css/main.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
+    <script>
+    function onoff(){
+      currentvalue = document.getElementById('onoff').value;
+      if(currentvalue == "Off"){
+        document.getElementById("onoff").value="On";
+        location.reload();
+      }else{
+        document.getElementById("onoff").value="Off";
+      }
+    }
+    </script>
+    <script src='js/plot.js'></script>
+    <script src='js/save-plots.js'></script>
+    <script src='js/main.js'></script>
 
    </head>
   <body>
@@ -58,9 +72,22 @@
 
 <hr>
 
+Yenile: <input type="button" value="On" id="onoff" onclick="onoff();">
+
+
+
+
+<br>
+ <button id = "saveData"> Save Data</button>
+ <br>
+
+
+ <button id="tik">Save Plot</button>
     <div id ="plot"></div>
 
-    <script src='js/main.js'></script>
+<div id = "plotData" class="Data"> </div>
+
+
 
   </body>
 </html>
