--- a/gui/experiments.html
+++ b/gui/experiments.html
@@ -47,11 +47,29 @@
 
 
 <hr>
-<select id = "expDataLoad" class="form-control">
+<div class="row">
+  <div class="col-md-6">
+    <select id = "expDataLoad" class="form-control">
+      <option selected> Select</option>;
+    </select>
+    <br>
+    <div id="plotValues"> </div>
+    <br>
+  </div>
+
+  <div class="col-md-6">
+    <select id = "expDataLoad2" class="form-control">
+      <option selected> Select</option>;
+    </select>
+    <br>
+    <div id="plotValues2"> </div>
+    <br>
+  </div>
+
+</div>
 
 
-</select>
-<br>
+
 <button id="selectBtn"> Plot </button>
 <hr>
 <br>
